# HH_test_task

./: CMakeLists.txt  README.md  source.cpp  Игра в жизнь.docx
